--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+click==8.1.3
 cycler==0.11.0
-fonttools==4.33.2
+Flask==2.1.2
+fonttools==4.33.3
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
 kiwisolver==1.4.2
+MarkupSafe==2.1.1
 matplotlib==3.5.1
 numpy==1.22.3
 packaging==21.3
@@ -8,3 +14,5 @@ Pillow==9.1.0
 pyparsing==3.0.8
 python-dateutil==2.8.2
 six==1.16.0
+Werkzeug==2.1.2
+zipp==3.8.0
